# entipy

./: .gitignore  README.md  pyproject.toml  requirements.txt  scratch.txt
demos/: getting_started.py  mr_product_name_resolution.py  product_name_resolution.py  sr_product_name_resolution.py
doc/: blocking.md  sample_datasets.md
samples/: product-name-blocking.csv  product-name-demo-dataset.csv
src/entipy/: __init__.py  datamodels.py  resolvers.py
src/tauer/: __init__.py  datamodels.py
tests/: test_merge_resolver.py  test_reference_blocking_keys.py  test_reference_compare.py  test_serial_resolver_blocking.py
