[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "entipy"
version = "0.0.4"
authors = [
    { name="Joe Ilagan", email="joe@archmob.com" }
]
description = "EntiPy is a Python toolkit that implements an incremental clustering approach to entity resolution."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sortedcontainers>=2.4.0"
]
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha"
]

[project.urls]
Repository = "https://github.com/Alteheit/entipy"
